# server_client_chat

./: CMakeLists.txt
client/: client.cpp  client.h  main.cpp
server/: main.cpp  server.cpp  server.h
src/: configuration.h
